src_client_bb_kvstore_cli_SOURCES = src/client/main.cpp
src_client_bb_kvstore_cli_LDADD = src/client/libbb-kvstore_cli.a

src_client_libbb_kvstore_cli_a_SOURCES = \
    src/client/stream.h                \
    src/client/tcp-client.h            \
    src/client/tcp-client.cpp          \
    src/client/cli.h                   \
    src/client/cli.cpp
