src_server_bb_kvstore_server_SOURCES = src/server/main.c
src_server_bb_kvstore_server_LDADD = src/server/libbb-kvstore_server.a

src_server_libbb_kvstore_server_a_SOURCES = \
    src/server/server.h                \
    src/server/server.c                \
    src/server/keyvalue-server.h       \
    src/server/keyvalue-server.c       \
    src/server/client-state.h          \
    src/server/client-state.c          \
    src/server/logger.h                \
    src/server/logger.c                \
    src/server/utils.h                 \
    src/server/utils.c                 \
    src/server/events_epoll.h          \
    src/server/events_kqueue.h         \
    src/server/events_kqueue.h         \
    src/server/string-hashtable.h      \
    src/server/string-hashtable.c      \
    src/server/hashtable.h             \
    src/server/hashtable.c
